# GenTexLEADR

./: README.md  fichier.cpp  grad.m  image.cpp  image.h
GenTexLEADR/: CMakeLists.txt  fichier.h  image.cpp  image.h  main.cpp
